--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,6 +1,6 @@
 # from name: plasmabio-template-r
 
-name: M1MEG-UE1-TP5-R
+name: Plasma-demo
 # channels priority
 # see https://bioconda.github.io/
 # conda-forge has highest prioriy
@@ -9,12 +9,12 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - jupyterlab=2
+  - jupyterlab=3
   - nbresuse
   - nodejs
   - libgomp
   - r-irkernel
-  - r-base>=3.6
+  - r-base>=4
   - r-tidyverse 
   - r-Matrix
   - r-lattice
